--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -51,180 +51,272 @@
     <button id="btnModificacion" type="button">Modificacion Usuario</button>
     <br>
     <!-- Dar de alta una usuario -->
-    <div class="alta">
-        <!-- Titulo -->
-        <h1>Alta de usuario</h1>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div>
-                    <!-- Seleccion de Rol -->
-                    <label>Rol</label>
-                    <select class="rol">
-                        <option value="administrador">Administrador</option>
-                        <option value="alumno">Alumno</option>
-                        <option value="profesor">Profesor</option>
-                    </select>
-                </div>
-                <div>
-                    <!-- Input de Nombre -->
-                    <label>Nombre</label>
-                    <input type="text" class="nombre">
-                </div>
-                <div>
-                    <!-- Input de Apellido -->
-                    <label>Apellido</label>
-                    <input type="text" class="apellido">
-                </div>
-                <div>
-                    <!-- Input de Documento -->
-                    <label>Documento</label>
-                    <input type="number" class="documento">
-                </div>
-                <div>
-                    <!-- Input de Fecha de Nacimiento -->
-                    <label>Fecha de Nacimiento</label>
-                    <input type="date" class="fnac">
-                </div>
-                <div>
-                    <!-- Seleccion de Documento -->
-                    <label>Genero</label>
-                    <select class="genero">
-                        <option value="masculino">Masculino</option>
-                        <option value="femenino">Femenino</option>
-                    </select>
-                </div>
-                <div>
-                    <!-- Input de Domicilio -->
-                    <label>Domicilio</label>
-                    <input type="text" class="domicilio">
-                </div>
-                <div>
-                    <!-- Input de Telefono -->
-                    <label>Telefono</label>
-                    <input type="number" class="telefono">
-                </div>
-                <div>
-                    <!-- Input de Matricula -->
-                    <label>Matricula</label>
-                    <input type="number" class="matricula">
-                </div>
-                <div>
-                    <!-- Input de Mail -->
-                    <label>Mail</label>
-                    <input type="text" class="mail">
-                </div>
-                <div>
-                    <!-- Input de Contraseña -->
-                    <label>Contraseña</label>
-                    <input type="password" class="pass">
-                </div>
-                <div>
-                    <!-- Input de Confirmar Contraseña -->
-                    <label>Confirmar Contraseña</label>
-                    <input type="password" class="confirm_pass">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="baja">
-        <!-- Titulo -->
-        <h1>Baja de usuario</h1>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div>
-                    <!-- Input de Matricula -->
-                    <label>Matricula</label>
-                    <input type="number" class="matricula">
-                </div>
-                <div>
-                    <!-- Input de Mail -->
-                    <label>Mail</label>
-                    <input type="text" class="mail">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modificacion">
-        <!-- Titulo -->
-        <h1>Modificacion de usuario</h1>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div>
+    <form class="alta">
+        <div class="alta">
+            <!-- Titulo -->
+            <h1>Alta de usuario</h1>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div>
+                        <!-- Seleccion de Rol -->
+                        <label>Rol</label>
+                        <select class="rol">
+                            <option value="administrador">Administrador</option>
+                            <option value="alumno">Alumno</option>
+                            <option value="profesor">Profesor</option>
+                        </select>
+                    </div>
+                    <div>
+                        <!-- Input de Nombre -->
+                        <label>Nombre</label>
+                        <input type="text" id="nombre">
+                    </div>
+                    <div>
+                        <!-- Input de Apellido -->
+                        <label>Apellido</label>
+                        <input type="text" id="apellido">
+                    </div>
+                    <div>
+                        <!-- Input de Documento -->
+                        <label>Documento</label>
+                        <input type="number" id="documento">
+                    </div>
+                    <div>
+                        <!-- Input de Fecha de Nacimiento -->
+                        <label>Fecha de Nacimiento</label>
+                        <input type="date" id="fnac">
+                    </div>
+                    <div>
+                        <!-- Seleccion de Documento -->
+                        <label>Genero</label>
+                        <select class="genero">
+                            <option value="masculino">Masculino</option>
+                            <option value="femenino">Femenino</option>
+                        </select>
+                    </div>
+                    <div>
+                        <!-- Input de Domicilio -->
+                        <label>Domicilio</label>
+                        <input type="text" id="domicilio">
+                    </div>
+                    <div>
+                        <!-- Input de Telefono -->
+                        <label>Telefono</label>
+                        <input type="number" id="telefono">
+                    </div>
+                    <div>
+                        <!-- Input de Matricula -->
+                        <label>Matricula</label>
+                        <input type="number" id="matricula">
+                    </div>
                     <div>
                         <!-- Input de Mail -->
                         <label>Mail</label>
-                        <select class="mail">
-                            <option></option>
-                        </select>
+                        <input type="text" id="mail">
                     </div>
-                    <!-- Seleccion de Rol -->
-                    <label>Rol</label>
-                    <select class="rol">
-                        <option value="administrador">Administrador</option>
-                        <option value="alumno">Alumno</option>
-                        <option value="profesor">Profesor</option>
-                    </select>
-                </div>
-                <div>
-                    <!-- Input de Nombre -->
-                    <label>Nombre</label>
-                    <input type="text" class="nombre">
-                </div>
-                <div>
-                    <!-- Input de Apellido -->
-                    <label>Apellido</label>
-                    <input type="text" class="apellido">
-                </div>
-                <div>
-                    <!-- Input de Documento -->
-                    <label>Documento</label>
-                    <input type="number" class="documento">
-                </div>
-                <div>
-                    <!-- Input de Fecha de Nacimiento -->
-                    <label>Fecha de Nacimiento</label>
-                    <input type="date" class="fnac">
-                </div>
-                <div>
-                    <!-- Seleccion de Documento -->
-                    <label>Genero</label>
-                    <select class="genero">
-                        <option value="masculino">Masculino</option>
-                        <option value="femenino">Femenino</option>
-                    </select>
-                </div>
-                <div>
-                    <!-- Input de Domicilio -->
-                    <label>Domicilio</label>
-                    <input type="text" class="domicilio">
-                </div>
-                <div>
-                    <!-- Input de Telefono -->
-                    <label>Telefono</label>
-                    <input type="number" class="telefono">
-                </div>
-                <div>
-                    <!-- Input de Matricula -->
-                    <label>Matricula</label>
-                    <input type="number" class="matricula">
-                </div>
-                <div>
-                    <!-- Input de Contraseña -->
-                    <label>Contraseña</label>
-                    <input type="password" class="pass">
+                    <div>
+                        <!-- Input de Contraseña -->
+                        <label>Contraseña</label>
+                        <input type="password" id="pass">
+                    </div>
+                    <div>
+                        <!-- Input de Confirmar Contraseña -->
+                        <label>Confirmar Contraseña</label>
+                        <input type="password" id="confirm_pass">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Boton para guardar datos -->
-    <input id="operacion" type="text" style="display:none;">
-    <button id="submit" type="submit">Guardar</button>
-
+    </form>
+    <form class="baja">
+        <div class="baja">
+            <!-- Titulo -->
+            <h1>Baja de usuario</h1>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div>
+                        <!-- Input de Matricula -->
+                        <label>Matricula</label>
+                        <input type="number" id="matricula">
+                    </div>
+                    <div>
+                        <!-- Input de Mail -->
+                        <label>Mail</label>
+                        <input type="text" id="mail">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    <form class="modificacion">
+        <div class="modificacion">
+            <!-- Titulo -->
+            <h1>Modificacion de usuario</h1>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div>
+                        <div>
+                            <!-- Input de Mail -->
+                            <label>Mail</label>
+                            <select class="mail">
+                                <option></option>
+                            </select>
+                        </div>
+                        <!-- Seleccion de Rol -->
+                        <label>Rol</label>
+                        <select class="rol">
+                            <option value="administrador">Administrador</option>
+                            <option value="alumno">Alumno</option>
+                            <option value="profesor">Profesor</option>
+                        </select>
+                    </div>
+                    <div>
+                        <!-- Input de Nombre -->
+                        <label>Nombre</label>
+                        <input type="text" id="nombre">
+                    </div>
+                    <div>
+                        <!-- Input de Apellido -->
+                        <label>Apellido</label>
+                        <input type="text" id="apellido">
+                    </div>
+                    <div>
+                        <!-- Input de Documento -->
+                        <label>Documento</label>
+                        <input type="number" id="documento">
+                    </div>
+                    <div>
+                        <!-- Input de Fecha de Nacimiento -->
+                        <label>Fecha de Nacimiento</label>
+                        <input type="date" id="fnac">
+                    </div>
+                    <div>
+                        <!-- Seleccion de Documento -->
+                        <label>Genero</label>
+                        <select class="genero">
+                            <option value="masculino">Masculino</option>
+                            <option value="femenino">Femenino</option>
+                        </select>
+                    </div>
+                    <div>
+                        <!-- Input de Domicilio -->
+                        <label>Domicilio</label>
+                        <input type="text" id="domicilio">
+                    </div>
+                    <div>
+                        <!-- Input de Telefono -->
+                        <label>Telefono</label>
+                        <input type="number" id="telefono">
+                    </div>
+                    <div>
+                        <!-- Input de Matricula -->
+                        <label>Matricula</label>
+                        <input type="number" id="matricula">
+                    </div>
+                    <div>
+                        <!-- Input de Contraseña -->
+                        <label>Contraseña</label>
+                        <input type="password" id="pass">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+        <!-- Boton para guardar datos -->
+        <input id="operacion" type="text" style="display:none;">
+        <button id="submit" type="submit">Guardar</button>
+        
 
     <script src="../js/register.js"></script>
+    <script>
+        jQuery.validator.addMethod("passwordCheck",
+            function (value, element, param) {
+                if (this.optional(element)) {
+                    return true;
+                } else if (!/[A-Z]/.test(value)) {
+                    return false;
+                } else if (!/[a-z]/.test(value)) {
+                    return false;
+                } else if (!/[0-9]/.test(value)) {
+                    return false;
+                }
+
+                return true;
+            },
+            "La contrase&ntilde;a debe contener al menos una mayuscula, una minuscula y un numero");
+
+        $(".alta .baja .modificacion").validate({
+            rules: {
+                apellido: {
+                    required: true
+                },
+                nombre: {
+                    required: true
+                },
+                documento: {
+                    required: true
+                },
+                fnac: {
+                    required: true
+                },
+                genero: {
+                    required: true
+                },
+                domicilio: {
+                    required: true
+                },
+                matricula: {
+                    required: true
+                },
+                mail: {
+                    required: true
+                },
+                pass: {
+                    required: true,
+                    minlength: 8,
+                    maxlength: 16
+                },
+                confirm_pass: {
+                    equalTo: "#pass"
+                }
+            },
+            messages: {
+                apellido: {
+                    required: "Este campo es obligatorio"
+                },
+                nombre: {
+                    required: "Este campo es obligatorio"
+                },
+                documento: {
+                    required: "Este campo es obligatorio"
+                },
+                fnac: {
+                    required: "Este campo es obligatorio"
+                },
+                genero: {
+                    required: "Este campo es obligatorio"
+                },
+                domicilio: {
+                    required: "Este campo es obligatorio"
+                },
+                matricula: {
+                    required: "Este campo es obligatorio"
+                },
+                pass: {
+                    required: "Este campo es obligatorio",
+                    minlength: "Este campo debe contener al menos 8 caracteres",
+                    maxlength: "Este campo debe contener maximo 16 caracteres"
+                },
+                confirm_pass: {
+                    equalTo: "No coinciden las contrase&ntilde;a"
+                }
+            
+            }
+        });
+    </script>
 
 </body>
 </html>
