ABM Carrera testeado y terminado

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -83,7 +83,7 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <select class="carrera">
+          <select class="carrera" id="carrera_baja">
             <option></option>
           </select>
         </div>
@@ -100,7 +100,7 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <select class="carrera">
+          <select class="carrera" id="carrera_modificacion">
             <option></option>
           </select>
         </div>
