vaciado de inputs y selects

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -109,7 +109,7 @@
   </div>
   <!-- Boton para guardar datos -->
   <input id="operacion" type="text" style="display:none;">
-  <button onclick="myFunction()" type="button">Guardar</button>
+  <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
   <script src="../js/register.js"></script>
   <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
